# lilac-benchmarks

./: .gitignore  README.md  monaco.csv  run_all  spa.csv
NPB3.3.1/: .gitignore  run_all
NPB3.3.1/CG/: Makefile  cg.f  globals.h  (+3 more)
SNU_NPB/: .gitignore
SparseBench/: .gitignore  Analyze  Compare  Install  Make.default_platform  Makefile  Makefile.clean  README  Report  Test  Validate  bench.ps  bench_sym  big_gen.py  configure  configure.more  crs_gen  crsmat016s  crsmat016u  generate.ps  install.ps  reference_results  reg_gen  reg_sym  regmat016s  regmat016u  regmat024s  regmat024u  run_all  variants
bfs/: bfs.cc  input.mtx  library.cc  library.h  makefile  run_all
hpcg/: .gitignore
libspmv/: .gitignore  Makefile  cl-probe.cpp  cl_00.cpp  cl_01.cpp  cl_10.cpp  cl_11.cpp  clgpu-model.c  clgpu-model.h  clgpu.cpp  fsparsex-slow.c  fsparsex.c  gpu-slow.c  gpu-unsafe.c  gpu.c  install  mkl-model.c  mkl-model.h  mkl-slow.c  mkl.c  native-impl.c  native-impl.h  native.c  opencl-slow.cpp  opencl.cpp  sparsex-slow.c  sparsex.c  test.cpp
pagerank/: Makefile  library.cc  library.h  main.cpp  makefile  pagerank.cc  run_all  spmv_naive.cc
parboil/: .gitignore  run_all
results/: all.txt  all_matrices.csv  amd.txt  amd_best.txt  amd_test.txt  amd_train.txt  analyse-matrices.py  cgo2.py  cgo3.py  cgo_data_2.csv  cgo_graph.csv  cgo_opt.csv  cgo_opt.py  cgo_scatter.csv  cgo_wales.csv  cnetlib.csv  cnetlib_speedup.csv  get-matrix-page  intel-final.txt  mkl.txt  mkl_test.txt  mkl_train.txt  netlib.csv  netlib_speedup.csv  ngt.csv  npb_post.csv  out_best.txt  out_best_cutoff.txt  pfold.csv  pfold_speedup.csv  plot.py  plot_speedup.py  process.py  requirements.txt  run_all  sample.py  sparsebench.csv  sparsebench_speedup.py  speedup.py  suite.py
siesta/: CHANGES  CHANGES_DETAILED
wales/: .gitignore
wales/CUDA/: CMakeLists.txt  README.txt
wales/CUDA/bfgsts/: bfgsts.cu  setup_bfgsts.cu
wales/CUDA/cost_function/: cost_function.cu  rigid_bodies.cu
wales/CUDA/include/: bfgsts.h  cost_function.h  cublas.h  error_checking.h  lbfgs.h  potential.h  printing.h  timer.h
wales/CUDA/lbfgs/: lbfgs.cu  linesearch.h  setup_lbfgs.cu
wales/CUDA/potential/: amber_potential.cu  lj_potential.cu  setup_potential_cputogpu.cu
wales/CUDA/utils/: cublas.cu  printing.cu  timer.cu
wales/DISCONNECT/source/: CMakeLists.txt  Makefile  disconnectionDPS  disconnectionDPS.f90  keywords.mod  page.mod  vars.mod
wales/GMIN/source/libmbpol/: CMakeLists.txt
wales/OPTIM/source/: Ackland_metals.f90  Ackland_wrapper.f  BGupta.f  BLN.f  CMakeLists.txt  EYtrap.f  Energy_1d_APBC.f90  Energy_1d_PBC.f90  Energy_1d_PBC_INVT.f90  Energy_2d_APBC.f90  Energy_2d_PBC.f90  Energy_2d_PBC_INVT.f90  Energy_3d_APBC.f90  Energy_3d_PBC.f90  Energy_4d_APBC.f90  Energy_4d_PBC.f90  GLJ.f90  GoOptim.f  Gthomson.f90  MKtrap.f  MLP3.f90  MLPB3.f90  MLPVB3.f90  MLQ.f90  Makefile  Natb.f  OPTIM.F  PachecoC60.f  RPH.f90  SBM.f  SD.f90  SiO2pshift.f  TIPmodes.f  aadistance.f90  aaorient.f90  amb_natinterns.f90  amber9dummy.f90  amber_top_reader.f90  ambnatintern_extras.f90  amhdummy.f90  (+142 more)
wales/OPTIM/source/ALIGN/: align_decide.f90  alignutils.f90  bnbalign.f90  fastbulk.f90  fastclusters.f90  fastutils.f90  legendre.f90
wales/OPTIM/source/AMBER/: CMakeLists.txt
wales/OPTIM/source/AMH/: CMakeLists.txt  amhglobals.f
wales/OPTIM/source/Bowman/: CMakeLists.txt  Makefile
wales/OPTIM/source/Bowman/fake/: bowmanwater.f90
wales/OPTIM/source/CONNECT/: Makefile  bestpath.f90  decide.f90  ido.f90  key_connect.f90  key_decide.f90  ncdata.f90  ncutils.f90  newconnect.f90  tryconnect.f90
wales/OPTIM/source/CONNECT/save_POINTER/: ncutils.f90
wales/OPTIM/source/CodeDocumentation/: README  optimWales.doxyfile
wales/OPTIM/source/DLFWrapper/: CMakeLists.txt  Makefile  dl-find.f90  dlf_allocate.f90  dlf_checkpoint.f90  dlf_conint.f90  dlf_convergence.f90  dlf_coords.f90  dlf_dimer.f90  dlf_formstep.f90  dlf_global_module.f90  dlf_hdlc_constraint.f90  dlf_hdlc_hdlclib.f90  dlf_hdlc_interface.f90  dlf_hdlc_matrixlib.f90  dlf_lbfgs.f90  dlf_lbfgs.f90~  dlf_neb.f90  dlf_qts.f90  dlf_scalestep.f90  dlf_stat_module.f90  dlf_svnversion.f90  dlf_task.f90  dlf_time.f90  dlf_util.f90  documentation.tex  interfacetoOPTIM.f90  interfacetoOPTIM.f90~
wales/OPTIM/source/NEB/: Makefile  grad.f90  key_neb.f90  lbfgs.f90  newneb.f90  nnutils.f90  oldnebgradient.f90  output.f90  tau.f90  unresnebbfgs.f90
wales/OPTIM/source/OPEPinterface/: CMakeLists.txt  RNA-2006.f  defs.F90  geometric_corrections.f90  makefile  md_initialise.F90  md_main_module.f90  md_read_parameters.f90  md_utils.f90  opep_interface.F90  other-2010-RNA.f90  protein-2006.f  read_parameters.f90
wales/OPTIM/source/SPINinterface/: CMakeLists.txt  dipole_userpot.f90  main_module.f90  makefile  math_module.f90
wales/OPTIM/source/UNRESinterface/: CMakeLists.txt  intbfgsts.f  intxmylbfgs.f  unguesspath.f90  unmeccano.f90
wales/OPTIM/source/cppneb/: CMakeLists.txt  cppneb_wrapper.f90  neb.f90  setup.sh
wales/OPTIM/source/libmbpol/: CMakeLists.txt  Makefile
wales/OPTIM/source/pluginloader/: CMakeLists.txt  fortran_interface.f90  plugin_loader.c
wales/OPTIM/source/unused_files/: decide.f90.new  decide.f90.old  example1Dpotential.f90.back-up  ncutils.f90.old  newconnect.f90.new  newconnect.f90.old  tmp_djw
wales/PATHSAMPLE/source/: .Pfold.f90.swp  CMakeLists.txt  Cv.f  Cvmin.f  Dijinit.f90  Dijkstra.f90  GT.f  Gthomson.f90  KMC.f  KMCcommit.f  Makefile  NGT.f  NGT_crstorage.f  NGTrealloc.f90  NGTrealloc_crstorage.f90  NGTremovei.f90  NGTremovei_crstorage.f90  NGTrenorm.f90  NGTrenorm_crstorage.f90  Pfold.f90  addminxyz.f  addperm.f  amhdump.f90  bulkmindist.f90  calcorder.f90  charmmdump.f  checkTS.f90  checkspodata.f  commons.f90  connect_unconnected.f90  connectd.f90  connectodata.f  cycle.f90  cycle2.f90  diagonalise2.f  dock.f90  dsort.f  get_exact_persistence.f90  getallmin.f  getallpaths.f  (+56 more)
wales/PATHSAMPLE/source/unused/: regrouprate.f90
wales/PLUGINS/DMACRYS/: CMakeLists.txt  commons.f90  dmacrys.f90  dmacrys_interface.f90  dmacrys_plugin.c  genrigid.f90  get_dmacrys.sh
(+1631 files in other folders)
